# batchman-zkp

./: .gitignore  Cargo.toml  README.md  goal.pl  meta_interpreter.pl  parsed.json  parsed2.json  parsed3.json  policy.json  policy.pl  proof_tree.json  rules.pl  rules_template.json  verify.json
checker/: Cargo.toml
checker/src/: main.rs
common/: Cargo.toml
common/src/: data.rs  lib.rs  unif.rs  unification_checker_circuit.rs  utils.rs
common/src/chips/: acc.rs  body_subtree_chip.rs  consistency_chip.rs  dot_chip.rs  fact_hash_chip.rs  mod.rs  poseidon_hash.rs  rlc_chip.rs  rlc_goal_check_chip.rs  rolc_compare_chip.rs  rows_compress_config.rs  rule_rows_chip.rs  rules_check_chip.rs  sig_check_chip.rs  sig_or_compare_chip.rs  sig_rlc_chip.rs
common/src/chips/fact_check/: built_in_check_chip.rs  fact_hash_chip.rs  mod.rs  poseidon_hash.rs
common/src/chips/finding_rule/: body_subtree_chip.rs  mod.rs  sig_check_chip.rs  sig_or_compare_chip.rs
common/src/chips/value_check/: dot_chip.rs  mod.rs  rows_compress_config.rs  rule_rows_chip.rs
common/src/io/: mod.rs  read_fact_hashes.rs
common/src/utils_2/: common_helpers.rs  consistency_helpers.rs  mod.rs  off_circuit_poseidon.rs  predicate_helpers.rs  subtree_helpers.rs  value_helpers.rs
generator/: Cargo.toml
generator/src/: main.rs
issue/: Cargo.toml
issue/src/: facts.yaml  facts1.yaml  facts10.yaml  facts11.yaml  facts12.yaml  facts13.yaml  facts15.yaml  facts16.yaml  facts17.yaml  facts18.yaml  facts2.yaml  facts20.yaml  facts3.yaml  facts4.yaml  facts5.yaml  facts6.yaml  facts7.yaml  main.rs
output/: debug_unification.json  fact_hashes.json  unif_proofs.json  unification_inputs.json  unification_inputs_hier.json
prolog/: goal.pl  input.pl  knowledge_base.pl  main.pl  matrix.pl  meta_interpreter.pl  policy.pl  proof_tree.json  rules.pl
prove/: Cargo.toml
prove/src/: data.rs  helpers.rs  logic.rs  main.rs  proofs.rs  writer.rs
tests/test1/: input.pl  main.pl  policy.pl
tests/test10/: input.pl  policy.pl
tests/test11/: policy.pl
tests/test12/: input.pl
tests/test13/: input.pl  policy.pl
tests/test14/: input.pl  policy.pl
tests/test15/: input.pl  main.pl  policy.pl
tests/test16/: input.pl
tests/test17/: input.pl  policy.pl
tests/test18/: input.pl  policy.pl
tests/test2/: input.pl  main.pl
tests/test20/: input.pl  main.pl
tests/test3/: input.pl  main.pl
tests/test4/: input.pl  main.pl
tests/test5/: input.pl  main.pl  policy.pl
tests/test6/: input.pl
tests/test7/: input.pl  policy.pl
tests/test8/: policy.pl
tests/test9/: input.pl
tokens/: Cargo.toml  prolog.g4
tokens/src/: main.rs
tokens/src/parser/: mod.rs  prolog.interp  prolog.tokens  prologLexer.interp  prologbaselistener.rs  prologbasevisitor.rs  prologlexer.rs  prologlistener.rs  prologparser.rs  prologvisitor.rs
verify/: Cargo.toml
verify/src/: main.rs  reader.rs
