[workspace]
resolver = "3"
members = [ "common",
    "prove",
    "verify",]

[workspace.dependencies]
ark-groth16 = { version = "0.5", default-features = true }
ark-bn254 = { version = "0.5", default-features = false }
serde = { version = "1.0", default-features = false }
ark-snark = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
base64 = { version = "0.22", default-features = false }
serde_json = { version = "1.0", default-features = false }
anyhow = { version = "1.0", default-features = false }
common = { path = "./common", default-features = false }
ark-relations = { version = "0.5", default-features = false }
ark-r1cs-std = { version = "0.5", default-features = false }
rand = { version = "0.8", default-features = false }