[workspace]
resolver = "3"
members = ["common",
           "prove",
           "tokens",
           "verify",
           ]


[workspace.dependencies]
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
anyhow = { version = "1.0", default-features = false }
common = { path = "./common", default-features = false }
prove = { path = "./prove", default-features = false }
halo2_proofs = { version = "0.3", default-features = false }
rayon = { version = "1.11", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["std"] }
rand_core = { version = "0.6", default-features = false }



blake2 = { version = "0.10.6 ", default-features = false }
regex = { version = "1.11.3", default-features = false }


