[package]
name = "checker"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-groth16 = { workspace = true }
ark-bn254 = { workspace = true }
ark-snark = { workspace = true }
rand = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
anyhow = { workspace = true } 
serde = { workspace = true , features = ["derive", "std"] }


light-poseidon = "0.4"
ark-ff = "0.5.0"

indexmap = "2.11.4"
num-bigint = "0.4.6"
num-traits = "0.2.19"
ark-std = "0.5.0"
regex = "1.11.3"
ark-crypto-primitives = { version = "0.5"}
rayon = "1.11.0"
ark-serialize = "0.5.0"
blake2 = "0.10.6"