[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true } 
halo2_proofs = { workspace = true }
rand_core    = { workspace = true, features = ["getrandom"] }
serde = { workspace = true , features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"]}


rayon = { workspace = true }

blake2 = { workspace = true }


halo2_gadgets = "0.3.1"
once_cell = "1.21.3"
halo2_poseidon = "0.1.0"
halo2curves = "0.9.0"
num-bigint = "0.4.6"
sha2 = "0.10.9"
blake3 = "1.8.2"