[package]
name = "issue"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true , features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"]}
anyhow = { workspace = true } 
common = { workspace = true }
halo2_proofs = { workspace = true }
rayon = { workspace = true }
base64 = { workspace = true }
halo2curves = { workspace = true }
halo2_gadgets = { workspace = true }
once_cell = { workspace = true }
rand_core  = { workspace = true, features = ["getrandom"] }


num-bigint = { workspace = true, features = ["serde"]}
serde_yaml = { workspace = true }

snark-verifier = "0.2.3"