[package]
name = "prove"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-groth16 = { workspace = true }
ark-bn254 = { workspace = true }
ark-snark = { workspace = true }
rand = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
anyhow = { workspace = true } 
serde = { workspace = true }
