[package]
name = "tokens"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true , features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
anyhow = { workspace = true } 
common = { workspace = true }





regex = { workspace = true, features = ["std", "unicode-perl"] }
antlr4rust = "0.5.2"
lazy_static = "1.4"
once_cell = "1.19"       # replaces lazy_static
