[package]
name = "verify"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
anyhow = { workspace = true }
common = { workspace = true }
halo2_proofs = { workspace = true }
rayon = { workspace = true }
base64 = { workspace = true }

halo2curves = "0.9.0"
num-bigint = "0.4.6"